# ut-dr-save-manager

./: .flake8  .gitignore  BUILD.md  Product.wxs  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  udsm.wixproj
.github/workflows/: build_nuitka_ubuntu.yml  build_nuitka_windows.yml
scripts/: compile-styles.ps1  compile-styles.sh  compile-ui.sh
udsm/: __main__.py  config.py  model.py  paths.py  version.py
udsm/licenses/: psutil.json  pyqt6.json  python.json  python.txt
udsm/premade_saves/UNDERTALE/Genocide/Sans/: file0
udsm/premade_saves/UNDERTALE/Genocide/Sans./: undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Asgore/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Mettaton EX/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Papyrus/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Photoshop Flowey/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Toriel/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/Neutral/Undyne/: file0  undertale.ini
udsm/premade_saves/UNDERTALE/True Pacifist/Asriel Dreemurr/: file0  undertale.ini
udsm/premade_saves/deltarune/Endbosses/GIGA Queen/: filech2_0
udsm/premade_saves/deltarune/Endbosses/King/: filech1_0
udsm/premade_saves/deltarune/Endbosses/Tenna/: filech3_0
udsm/premade_saves/deltarune/Endbosses/Titan/: filech4_0
udsm/premade_saves/deltarune/Optional Bosses/Hammer of Justice/: filech4_0
udsm/ui/: about.ui  create.ui  licenses.ui  playlist_runner.ui  playlists.ui  window.ui
~/.config/UNDERTALE/: file0  undertale.ini
(+4 files in other folders)
